List.of(), Fixed minor typo